latexsupport: allow "small" environ to work

--- a/applications/latexsupport/starlink_basic.css
+++ b/applications/latexsupport/starlink_basic.css
@@ -13,7 +13,8 @@ body{
     font-family: "Verdana";
     font-size:85%;
 }
-small{font-size: .8em;}
+
+.small{font-size: .8em;}
 
 .tt{
     font-family: "Droid Sans Mono",monospace;
