latexsupport: dt's should be bold

--- a/applications/latexsupport/starlink_basic.css
+++ b/applications/latexsupport/starlink_basic.css
@@ -277,6 +277,10 @@ dt.enumerate-enumitem{
     margin-top:0%;
 }
 
+/* general description class */
+dt {
+   font-weight: bold;
+}
 
 /* foot notes */
 div.footnotes{margin-right:0px;}
